[gd_scene load_steps=9 format=3 uid="uid://dd147s3gtkprx"]

[ext_resource type="Script" path="res://Assets/Scripts/Drink Station/portafilter.gd" id="1_chd5a"]
[ext_resource type="Script" path="res://Assets/Scripts/Components/portafilterOzComponent.gd" id="3_ib3ny"]
[ext_resource type="Script" path="res://Assets/Scripts/Components/pickupToggleComponent.gd" id="3_y1o3u"]
[ext_resource type="Script" path="res://Assets/Scripts/Components/pickupComponent.gd" id="4_t8wjm"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_j2noq"]
size = Vector2(65, 85)

[sub_resource type="LabelSettings" id="LabelSettings_p7yvh"]
font_size = 50
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ibdxk"]
size = Vector2(64, 84)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g6hnt"]
size = Vector2(64, 84)

[node name="portafilter" type="Node2D" node_paths=PackedStringArray("oz_component", "pickupComponent", "pickupComp")]
script = ExtResource("1_chd5a")
isDouble = null
ID = null
oz_component = NodePath("filter_oz_component")
pickupComponent = NodePath("pickupToggleComponent")
pickupComp = NodePath("pickupComponent")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 0.141176, 1)
texture = SubResource("PlaceholderTexture2D_j2noq")

[node name="filter_oz_component" type="Node" parent="." node_paths=PackedStringArray("filter", "label")]
script = ExtResource("3_ib3ny")
filter = NodePath("..")
label = NodePath("../Label")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -29.0
offset_top = 17.0
offset_right = 29.0
offset_bottom = 89.0
grow_horizontal = 2
text = "30"
label_settings = SubResource("LabelSettings_p7yvh")
horizontal_alignment = 1

[node name="pickupToggleComponent" type="Area2D" parent="." node_paths=PackedStringArray("parent", "sprite")]
collision_mask = 5
script = ExtResource("3_y1o3u")
parent = NodePath("..")
sprite = NodePath("../Sprite2D")
positionOffset = Vector2(10.725, 5.545)
rotationOffset = -5.9

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickupToggleComponent"]
shape = SubResource("RectangleShape2D_ibdxk")

[node name="area2d" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="area2d"]
shape = SubResource("RectangleShape2D_g6hnt")

[node name="pickupComponent" type="Node2D" parent="." node_paths=PackedStringArray("parent")]
script = ExtResource("4_t8wjm")
parent = NodePath("..")

[connection signal="area_entered" from="pickupToggleComponent" to="pickupToggleComponent" method="_on_area_entered"]
[connection signal="area_exited" from="pickupToggleComponent" to="pickupToggleComponent" method="_on_area_exited"]
[connection signal="dropped" from="pickupToggleComponent" to="." method="_on_pickup_toggle_component_dropped"]
[connection signal="mouse_entered" from="pickupToggleComponent" to="pickupToggleComponent" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="pickupToggleComponent" to="pickupToggleComponent" method="_on_mouse_exited"]
[connection signal="pickedUp" from="pickupToggleComponent" to="." method="_on_pickup_toggle_component_picked_up"]
[connection signal="area_entered" from="area2d" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="area2d" to="." method="_on_area_2d_area_exited"]
